# haskell-fun

./: .gitignore  README.markdown
db-report/: .gitignore  CHANGELOG.md  Readme.markdown  db-report.cabal  report.hs
depmap/: test.hs
hlist/: reorder.hs
hsnginx/: Readme.md  config  nginx.conf
hsnginx/cbits/: Makefile  My.hs  ngx_http_haskell_module.c
hsnginx/utils/: bootstrap.sh
ht-no-more/: Bug15746.hs  ChangeLog.md  Entry.hs  cpuinfo_dmalkr.txt  ht-no-more.cabal  results.txt  wrapper.c
idris/: hello.idr
idris/Kats-Code/Part1/: intro0-tdd.ibc  intro0-tdd.idr  intro1-list.idr  intro2-vect.idr  intro3-data.idr
idris/Kats-Code/Part2/: append5.idr  checkEq2.idr  checkEq4.idr  exactLength1.idr  readvec0.idr  void3.idr
idris/Kats-Code/Part3/Effects/: Door1.idr  Door2.idr  Expr.idr  Queens.idr  Select.idr  effects_demos.ipkg  hello.idr
idris/Kats-Code/Part3/Hangman/: VectMissing.idr  hangman.idr
idris/Kats-Code/Part3/Invaders/: Aliens.idr  Gamestate.idr  Main.idr  Rnd.idr  Starfield.idr
idris/Kats-Code/Part4/: infIO-stream3.idr  rndstream2.idr  streams1.idr
idris/Kats-Code/Part4/Views/: merge_sort.idr  merge_sort_view.idr  reverse.idr  snoclist.idr
idris/sort/: l1.idr
inotify/: README.markdown  ion.hs
iterative/examples1/: conduit-1.hs  conduit-3.hs  iteratee-1.hs  iteratee-2.hs  iteratee-3.hs  machines-1.hs  machines-2.hs  machines-3.hs  pipes-1.hs  pipes-2.hs  pipes-3.hs
iterative/smaller_examples/: info  prepare_data_machine.hs
jobs/: Main.hs
postgres-report/dynamic/: 00.deadlocks.sql
postgres-report/static/: 00.general-info.sql  01.table-size.sql  02.write-activity.sql  03.life-data.sql  04.indexes-unused.sql  05.table-read-cache-hit.sql
regions/: Minimal.hs  SafeHandles.hs  SafeHandlesTEQ.hs  SafeHandlesTest.hs  info.markdown
regions/typed-device/: main.hs
series/: 1.lhs  2.lhs
sum/: post2.md.lhs  post3.md.lhs  post4.md.lhs
talks/cloud-haskell/: 1.markdown  talk.tex
talks/cloud-haskell/images/: c-h-architecture.pdf_tex  c-h-architecture.xml  c-h-d-p  c-h-n-t.xml
talks/ffi/: talk.org  thread-local-storage.org
talks/ffi/presentation/: index.html
talks/ffi/programs/: 7.hs  fork-on-simple.hs
talks/ffi/programs/capi/: Makefile  pi.c  (+3 more)
typelevel-comp/: composable.hs
typelevel-literals/: Main.hs  Min.lhs  Proof.lhs  README.markdown  TypeLevelFloat.hs  TypeLevelRatio.hs
typelevel-literals/relalg/: RelAlg.lhs
(+17 files in other folders)
