name:                ht-no-more
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MPL-2.0
license-file:        LICENSE
author:              Alexander Vershilov
maintainer:          alexander.vershilov@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable ht-no-more
  main-is:             wrapper.c
  other-modules:       Entry 
  -- other-extensions:    
  build-depends:       base >=4.10 && <4.12
  -- hs-source-dirs:      
  default-language:    Haskell2010

  -- we can't cheat now, we must process options on our own
  -- Warning: -rtsopts and -with-rtsopts have no effect with -no-hs-main.
  --  Call hs_init_ghc() from your main() function to set these options.
  ghc-options:         -no-hs-main
                       -threaded
                       -optl-Wl,-wrap,getNumberOfProcessors
